# log-doctor-provider-back

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entra-id-notes.md  entra-id.bicep  entra-id.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test_sub.py
.agent/rules/: .ai-instructions.md
app/: __init__.py  main.py
app/api/: .ai-instructions.md  health.py
app/common/: .ai-instructions.md  azure_utils.py
app/core/: .ai-instructions.md  __init__.py  auth_provider.py  config.py  cron.py  exceptions.py  handlers.py  i18n.py  logging.py  middleware.py  routing.py  security.py
app/domains/: .ai-instructions.md
app/infra/: .ai-instructions.md
docs/: CHANGELOG.md  OTA_UPDATE.md  aca-guide.md  agent-architecture.md  agent-deactivation.md  application-insights-decision.md  automated_pipeline_summary.md  azure_api_architecture.md  bicep-guide.md  client_llm_mission_briefing.md  entra_id_auth_troubleshooting.md  insight-system-design.md  refactoring_summary.md  scheduled-diagnosis-architecture.md  security_architecture_design.md  tenant-registration-architecture.md  zero_maintenance_deploy_guide.md
docs/resolved/: aadsts50076_mfa_obo_issue.md  env_configuration_guide_for_local.md  jwks_verification_process.md
infra/: README.md
infra/client/: client-setup.json  main.bicep  main.json
infra/provider/: main.bicep  (+3 more)
scripts/: decode_jwt.py  deploy-provider.sh  init_cosmos.py  setup_db.py
tests/: conftest.py  test_agent_discovery.py  test_agent_poke.py  test_tenant_logic.py
(+186 files in other folders)
