[project]
name = "log-doctor-provider-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "azure-cosmos>=4.14.6",
    "azure-identity>=1.25.2",
    "fastapi>=0.129.0",
    "fastapi-restful>=0.6.0",
    "httpx>=0.28.1",
    "msal>=1.34.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "structlog>=25.5.0",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.6",
    "pre-commit>=4.1.0",
]

[tool.ruff.lint]
# 전체적인 린트 규칙 설정
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501", "B008", "N818"] # B008: FastAPI Depends, N818: Exception suffix

[tool.ruff.format]
# Prettier와 유사한 포맷팅 설정
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
